--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Input Types</title>
+    <title>Experiments</title>
   </head>
   <body>
-    <h1>Input types</h1>
+    <h1>Experiments</h1>
   </body>
 </html>
