--- a/input/index.html
+++ b/input/index.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     <h1>Input types</h1>
+    <h2>Date</h2>
+    <input type="date" />
+    <h2>Time</h2>
+    <input type="time" />
+    <h2>Datetime Local</h2>
+    <input type="datetime-local" />
   </body>
 </html>
