--- a/clamp/index.html
+++ b/clamp/index.html
@@ -13,5 +13,216 @@
         <p>Fusce egestas elit eget lorem. Quisque ut nisi. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem.</p>
       </div>
     </div>
+
+    <table>
+      <thead>
+        <tr>
+          <th><strong>Title</strong></th>
+          <th><strong>Description</strong></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><strong>Cozy Mountain Retreat with Stunning Views</strong></td>
+          <td>A comfortable cabin nestled in the mountains, offering breathtaking scenic views. Perfect for outdoor enthusiasts or those seeking a peaceful escape from city life.</td>
+        </tr>
+        <tr>
+          <td><strong>Modern Loft in the Heart of Downtown</strong></td>
+          <td>A stylish, open-concept loft located in the bustling center of the city. Enjoy easy access to shopping, dining, and nightlife while relaxing in a sleek, contemporary space.</td>
+        </tr>
+        <tr>
+          <td><strong>Beachfront Bungalow with Private Patio</strong></td>
+          <td>A charming bungalow just steps from the beach, complete with a secluded outdoor patio. Ideal for watching sunsets and enjoying the ocean breeze from the comfort of home.</td>
+        </tr>
+        <tr>
+          <td><strong>Secluded Cabin in the Woods with Hot Tub</strong></td>
+          <td>A peaceful cabin tucked away in the forest, featuring a private hot tub for relaxation. A great place to unwind in nature, with plenty of hiking and wildlife nearby.</td>
+        </tr>
+        <tr>
+          <td><strong>Chic City Apartment Near All Attractions</strong></td>
+          <td>A sleek, modern apartment within walking distance of the city’s main attractions. Perfect for travelers looking to experience the best of urban living without the hassle.</td>
+        </tr>
+        <tr>
+          <td><strong>Rustic Cottage on a Serene Lake</strong></td>
+          <td>A quaint cottage overlooking a tranquil lake, perfect for peaceful getaways. Spend your days kayaking or fishing, and your nights by the fire pit under the stars.</td>
+        </tr>
+        <tr>
+          <td><strong>Spacious Family Home with Pool &amp; Garden</strong></td>
+          <td>A large, family-friendly home equipped with a pool and a lush garden for outdoor fun. Perfect for family gatherings, with plenty of room to relax and enjoy together.</td>
+        </tr>
+        <tr>
+          <td><strong>Stylish Studio in Vibrant Urban Neighborhood</strong></td>
+          <td>A contemporary studio apartment in a lively part of town, ideal for urban explorers. The studio offers all the essentials, with trendy cafes and shops right outside.</td>
+        </tr>
+        <tr>
+          <td><strong>Luxury Penthouse with Rooftop Terrace</strong></td>
+          <td>A high-end penthouse featuring a private rooftop terrace with panoramic city views. Unwind in luxury after a day exploring the city, with amenities to suit all your needs.</td>
+        </tr>
+        <tr>
+          <td><strong>Historic Home with Modern Upgrades</strong></td>
+          <td>A charming, historic home that has been fully updated with modern amenities. The perfect blend of old-world charm and modern comfort, located in a beautiful, quiet area.</td>
+        </tr>
+        <tr>
+          <td><strong>Romantic Getaway with Ocean Views</strong></td>
+          <td>A cozy retreat for couples, offering stunning ocean views for a perfect romantic escape. Enjoy private sunsets and strolls along the beach, with intimate dining nearby.</td>
+        </tr>
+        <tr>
+          <td><strong>Unique A-Frame Cabin Nestled in Nature</strong></td>
+          <td>A distinctive A-frame cabin set in a natural environment, offering a rustic yet unique stay. Ideal for adventurous travelers seeking a unique architectural experience.</td>
+        </tr>
+        <tr>
+          <td><strong>Elegant Villa with Private Beach Access</strong></td>
+          <td>A luxurious villa with direct access to a private beach for exclusive relaxation. Enjoy high-end amenities, spacious rooms, and breathtaking coastal views.</td>
+        </tr>
+        <tr>
+          <td><strong>Boho-Chic Apartment in Arts District</strong></td>
+          <td>A trendy, bohemian-style apartment in the heart of an artistic neighborhood. Perfect for creative souls who love eclectic decor and being surrounded by art and culture.</td>
+        </tr>
+        <tr>
+          <td><strong>Tiny House Experience in the Countryside</strong></td>
+          <td>A charming tiny house surrounded by nature, providing a minimalist escape. Ideal for those seeking a peaceful, off-grid retreat with all the essentials in a compact space.</td>
+        </tr>
+        <tr>
+          <td><strong>Converted Barn with Farmhouse Charm</strong></td>
+          <td>A rustic barn transformed into a cozy home, with authentic farmhouse details. Perfect for those looking for a rural experience with modern comforts in a unique setting.</td>
+        </tr>
+        <tr>
+          <td><strong>Contemporary Condo with City Skyline Views</strong></td>
+          <td>A modern condo boasting breathtaking views of the city's skyline. Enjoy the best of city living with all the conveniences and a stunning backdrop to your stay.</td>
+        </tr>
+        <tr>
+          <td><strong>Treehouse Hideaway in Forest Oasis</strong></td>
+          <td>A unique treehouse accommodation surrounded by lush forest, perfect for nature lovers. Experience the serenity of being up in the trees with modern amenities at your disposal.</td>
+        </tr>
+        <tr>
+          <td><strong>Lakeside Chalet with Private Dock</strong></td>
+          <td>A beautiful chalet by the lake, featuring a private dock for water activities. Perfect for water lovers, with kayaking, swimming, and fishing right at your doorstep.</td>
+        </tr>
+        <tr>
+          <td><strong>Designer Home in Exclusive Neighborhood</strong></td>
+          <td>A stylish designer home located in a prestigious, upscale neighborhood. This luxurious residence offers the utmost comfort and privacy, with high-end finishes throughout.</td>
+        </tr>
+        <tr>
+          <td><strong>Coastal Cottage Steps from the Beach</strong></td>
+          <td>A cute and cozy cottage just a short walk away from the beach. Ideal for beachgoers looking for a relaxing and charming home base near the shore.</td>
+        </tr>
+        <tr>
+          <td><strong>Glamping Tent with Mountain Backdrop</strong></td>
+          <td>A luxurious glamping tent with stunning views of the surrounding mountains. A unique blend of camping and comfort, with all the amenities of a hotel under the stars.</td>
+        </tr>
+        <tr>
+          <td><strong>Urban Oasis with Private Courtyard</strong></td>
+          <td>A quiet, comfortable city apartment with a peaceful private courtyard. Enjoy the perfect balance of urban convenience and secluded relaxation in the heart of the city.</td>
+        </tr>
+        <tr>
+          <td><strong>Beachy Bungalow with Outdoor Shower</strong></td>
+          <td>A beachside bungalow featuring an outdoor shower for post-beach cleanups. Relax and unwind in a tropical setting, just moments from the sand and surf.</td>
+        </tr>
+        <tr>
+          <td><strong>Quaint Country Cottage with Cozy Fireplace</strong></td>
+          <td>A warm and welcoming country cottage, complete with a charming fireplace. The perfect spot for a romantic escape or a peaceful weekend away in the countryside.</td>
+        </tr>
+        <tr>
+          <td><strong>Spacious Loft with Industrial Vibes</strong></td>
+          <td>A large, open loft featuring exposed brick and industrial decor for a modern touch. Perfect for travelers who enjoy contemporary design and a spacious living area.</td>
+        </tr>
+        <tr>
+          <td><strong>Eco-Friendly Home with Solar Power</strong></td>
+          <td>A sustainable home powered by solar energy, perfect for environmentally conscious guests. Stay in comfort while minimizing your impact on the planet.</td>
+        </tr>
+        <tr>
+          <td><strong>Mid-Century Modern Gem with Pool</strong></td>
+          <td>A stylish mid-century home featuring a private pool for lounging and relaxation. This home combines retro design with modern conveniences, making it a perfect escape.</td>
+        </tr>
+        <tr>
+          <td><strong>Downtown Loft with High Ceilings and Art Decor</strong></td>
+          <td>A chic downtown loft with soaring ceilings and curated art pieces throughout. Ideal for art lovers and city explorers who appreciate creative design in their living space.</td>
+        </tr>
+        <tr>
+          <td><strong>Rustic Log Cabin with River Access</strong></td>
+          <td>A cozy log cabin located near a river, perfect for fishing or canoeing. Ideal for nature lovers looking for a secluded, rustic retreat with plenty of outdoor activities.</td>
+        </tr>
+        <tr>
+          <td><strong>Quiet Retreat on Organic Farm</strong></td>
+          <td>A serene getaway on a working organic farm, offering peaceful surroundings. Guests can enjoy farm-fresh produce, interact with animals, and relax in nature.</td>
+        </tr>
+        <tr>
+          <td><strong>Bright &amp; Airy Studio in Trendy Area</strong></td>
+          <td>A sun-filled studio apartment located in a fashionable, trendy neighborhood. Enjoy bright, open spaces and easy access to popular shops, cafes, and nightlife.</td>
+        </tr>
+        <tr>
+          <td><strong>Chic Beach House with Infinity Pool</strong></td>
+          <td>A stylish beach house featuring an infinity pool with stunning ocean views. Enjoy luxurious living in this modern home, perfect for both relaxation and entertainment.</td>
+        </tr>
+        <tr>
+          <td><strong>Vintage Cottage with Garden &amp; Fire Pit</strong></td>
+          <td>A charming vintage-style cottage surrounded by a garden and outdoor fire pit. Perfect for cozy evenings under the stars, roasting marshmallows, and unwinding in nature.</td>
+        </tr>
+        <tr>
+          <td><strong>Modern Townhouse with Rooftop Lounge</strong></td>
+          <td>A sleek townhouse with a private rooftop lounge area for relaxing or entertaining. Enjoy modern design and panoramic city views from your own rooftop retreat.</td>
+        </tr>
+        <tr>
+          <td><strong>Minimalist Apartment with Zen Garden</strong></td>
+          <td>A simple, modern apartment with an attached Zen garden for peaceful contemplation. The perfect retreat for travelers seeking simplicity, calm, and relaxation.</td>
+        </tr>
+        <tr>
+          <td><strong>Remote Cabin with Stargazing Deck</strong></td>
+          <td>A remote cabin in the wilderness, featuring a deck perfect for stargazing. Ideal for astronomy lovers or those seeking a quiet, off-grid escape under the night sky.</td>
+        </tr>
+        <tr>
+          <td><strong>Luxury Estate with Vineyard Views</strong></td>
+          <td>A sprawling estate overlooking a beautiful vineyard, offering a luxurious stay. Perfect for wine lovers, with private tastings and expansive views of the countryside.</td>
+        </tr>
+        <tr>
+          <td><strong>Designer Tiny Home with All Amenities</strong></td>
+          <td>A stylish tiny house packed with all the modern conveniences you could need. Ideal for guests who want to experience minimalist living without sacrificing comfort.</td>
+        </tr>
+        <tr>
+          <td><strong>Beach Villa with Hammocks &amp; Sunset Views</strong></td>
+          <td>A stunning beachside villa equipped with hammocks and breathtaking sunset views. Relax in luxury as you enjoy the serene beauty of the coast from your private oasis.</td>
+        </tr>
+        <tr>
+          <td><strong>Industrial Loft in the Heart of the Arts District</strong></td>
+          <td>A spacious loft in an artsy district, blending industrial elements with creative decor. Ideal for artists and travelers looking to stay in a vibrant, cultural area.</td>
+        </tr>
+        <tr>
+          <td><strong>Cozy Riverfront Cabin with Kayaks</strong></td>
+          <td>A comfortable cabin situated by the river, complete with kayaks for exploring the water. Perfect for adventurers and nature lovers looking to paddle down scenic waterways.</td>
+        </tr>
+        <tr>
+          <td><strong>Romantic Cottage with Private Hot Tub</strong></td>
+          <td>A secluded cottage featuring a hot tub for a romantic and relaxing getaway. Enjoy starry nights and intimate moments in a peaceful, private setting.</td>
+        </tr>
+        <tr>
+          <td><strong>Spacious Farmhouse with Acres of Land</strong></td>
+          <td>A large farmhouse set on vast land, perfect for families or groups seeking privacy. Enjoy outdoor activities, nature walks, and the charm of rural living.</td>
+        </tr>
+        <tr>
+          <td><strong>Contemporary Retreat in Wine Country</strong></td>
+          <td>A modern retreat located in the heart of wine country, ideal for vineyard visits. Relax in comfort and style while exploring local wineries and scenic landscapes.</td>
+        </tr>
+        <tr>
+          <td><strong>Private Island Cottage with Ocean Breezes</strong></td>
+          <td>A remote island cottage surrounded by the ocean, offering cooling breezes and privacy. Perfect for a secluded getaway where you can truly disconnect from the world.</td>
+        </tr>
+        <tr>
+          <td><strong>Chic Lakehouse with Paddleboards Included</strong></td>
+          <td>A fashionable lakehouse that comes with paddleboards for water sports enthusiasts. Spend your days exploring the lake and your nights relaxing by the fire.</td>
+        </tr>
+        <tr>
+          <td><strong>Artist’s Loft in Creative Hub</strong></td>
+          <td>A creative loft space located in an area buzzing with artistic energy and culture. Perfect for artists or travelers looking to immerse themselves in the local art scene.</td>
+        </tr>
+        <tr>
+          <td><strong>Seaside Villa with Direct Beach Access</strong></td>
+          <td>A luxurious seaside villa with private access to the beach for a truly exclusive stay. Relax in style with unparalleled views of the ocean and top-tier amenities.</td>
+        </tr>
+        <tr>
+          <td><strong>Bohemian Treehouse with Panoramic Views</strong></td>
+          <td>A unique treehouse with panoramic views, designed in a whimsical bohemian style. Escape into nature while enjoying the artistic and eclectic touches of this unique home.</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
