--- a/canvas/hex.html
+++ b/canvas/hex.html
@@ -55,7 +55,7 @@
       <div class="row">
         <label
           >Image URL:
-          <input id="imgUrl" type="text" size="40" value="https://picsum.photos/800/600" />
+          <input id="imgUrl" type="text" size="40" value="flower.jpeg" />
         </label>
         <label class="pill"
           >or Upload:
